@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <!DOCTYPE imprimatur PUBLIC 
-    "-//Imprimatur DTD 007//EN"
-    "http://imprimatur.sourceforge.net/imprimatur-007.dtd">
+    "-//Imprimatur DTD 008//EN"
+    "http://imprimatur.sourceforge.net/imprimatur-008.dtd">
 <imprimatur port="80" hostname="www.google.com">
 	<test name="Check Google homepage">
 		<request path="/">
