@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <!DOCTYPE imprimatur PUBLIC 
-    "-//Imprimatur DTD 007//EN"
+    "-//Imprimatur DTD 008//EN"
     "http://imprimatur.sourceforge.net/imprimatur-008.dtd">
 <imprimatur port="8080" hostname="localhost">
 	<test name="single regex success">
