@@ -1,3 +1,12 @@
+* Gets don't follow redirects by default.
+
+* Fixed example given in tests directory.
+
+* If no arguments are given on the command line, throws an exception saying no file specified.
+
+
+17
+
 * Can now set a request to follow redirects.
 
 15
